# falco-operators

./: .copilot-collections.yaml  .gitignore  .licenserc.yaml  .trivyignore  .versions  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  renovate.json
.github/workflows/: build_falco.yaml  cla-check.yml  close_stale.yaml  docs.yaml  docs_rtd.yaml  integration_test.yaml  promote_charm.yaml  publish_charm.yaml  release_falco.yaml  test.yaml  test_terraform_files.yaml  test_terraform_module.yaml
.vale/styles/config/vocabularies/local/: accept.txt
docs/: .custom_wordlist.txt  changelog.md  conf.py  index.md  requirements.txt
docs/explanation/: architecture.md  charm-design.md  index.md  security.md
docs/how-to/: back-up-restore.md  contribute.md  index.md  integrate-with-cos.md  upgrade.md
docs/reference/: actions.md  architecture.md  configurations.md  index.md  integrations.md  metrics.md
docs/tutorial/: deploy-falcosidekick.md  end-to-end-deployment.md  getting-started.md  index.md
falco-operator/: CONTRIBUTING.md  README.md  RELEASE.md  charmcraft.yaml  pyproject.toml
falco-operator/src/: charm.py  config.py  service.py  state.py
falco-operator/src/prometheus_alert_rules/: falco.rule
falco-operator/src/templates/: falco.service.j2
falco-operator/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
falco-operator/terraform/tests/: main.tf  main.tftest.hcl
falco-operator/tests/: conftest.py
falco-operator/tests/integration/: test_charm.py
falco-operator/tests/unit/: conftest.py  test_charm.py  test_config.py  test_service.py  test_state.py
falcosidekick-k8s-operator/: CONTRIBUTING.md  README.md  charmcraft.yaml  pyproject.toml
falcosidekick-k8s-operator/rock/: README.md  falcosidekick.yaml  rockcraft.yaml
falcosidekick-k8s-operator/src/: charm.py  config.py  relations.py  state.py  workload.py
falcosidekick-k8s-operator/src/grafana_dashboards/: falco.json
falcosidekick-k8s-operator/src/prometheus_alert_rules/: falcosidekick.rule
falcosidekick-k8s-operator/src/templates/: falcosidekick.yaml.j2
falcosidekick-k8s-operator/terraform/: README.md  main.tf  outputs.tf  variables.tf
falcosidekick-k8s-operator/terraform/tests/: main.tf  main.tftest.hcl
falcosidekick-k8s-operator/tests/: conftest.py
falcosidekick-k8s-operator/tests/integration/: conftest.py  test_charm.py
falcosidekick-k8s-operator/tests/unit/: conftest.py  test_charm.py  test_config.py  test_relations.py  test_state.py  test_workload.py
interfaces/falcosidekick_http_endpoint/: README.md  pyproject.toml  tox.toml
interfaces/falcosidekick_http_endpoint/src/pfe/interfaces/falcosidekick_http_endpoint/: __init__.py  _falcosidekick_http_endpoint.py  _version.py
interfaces/falcosidekick_http_endpoint/tests/unit/: conftest.py  test_falcosidekick_http_endpoint.py  test_version.py  test_version_in_charm.py
src/: state.py
src/templates/: falco.service.j2  falco.yaml.j2
